@@ -148,6 +148,9 @@ public:
 	/***** ***** ***** ***** inherited ***** ***** ****** *****/
 
 	/** Inherited from tscrollbar_container. */
+	void set_size(const tpoint& origin, const tpoint& size);
+
+	/** Inherited from tscrollbar_container. */
 	void child_populate_dirty_list(twindow& caller,
 			const std::vector<twidget*>& call_stack);
 
