@@ -1,6 +1,8 @@
 Version 1.7.8+svn:
  * Language and i18n:
    * Updated translations: Czech, Polish
+ * User interface:
+   * Show selected item after a listbox resize (bug #13995)
 
 Version 1.7.8-beta1:
  * Campaigns:
